added some styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,14 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
+
 <body>
-    <h1>My first WebRTC app!</h1>
-    <video>autoplay</video>
+    <h1 class="mb-10 mt-10 text-2xl text-center">My first WebRTC app!</h1>
+    <div class="mb-10 mx-auto text-center w-full">
+        <video class="mx-auto" controls>autoplay</video>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
+
 </html>
