--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="mb-10 mt-10 text-2xl text-center">My first WebRTC app!</h1>
     <div class="mb-10 mx-auto text-center w-full">
-        <video class="mx-auto" controls>autoplay</video>
+        <video class="mx-auto" controls autoplay></video>
     </div>
 
     <script src="./js/main.js"></script>
