trying to work with peer connection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         <video class="mx-auto" controls autoplay></video>
     </div>
 
+    <div class="mb-10 flex">
+        <video autoplay id="one"></video>
+        <video autoplay id="two"></video>
+    </div>
+    <button id="connect"> Start peer connection</button>
+
     <script src="./js/main.js"></script>
+    <script src="./js/adpter.js"></script>
 </body>
 
 </html>
