--- a/peer/index.html
+++ b/peer/index.html
@@ -7,6 +7,16 @@
     <title>Peer js example</title>
 
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
+    <script src="./peer/custom-peerjs.js"></script>
+
+    <style>
+        #step1-error {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,7 +30,7 @@
             </div>
             <div>
                 <h1 class="mb-10 mt-10 text-xl text-center">You</h1>
-                <video class="mx-auto" autoplay></video>
+                <video id="my-video" class="mx-auto" muted="false" autoplay></video>
             </div>
         </div>
 
@@ -61,10 +71,6 @@
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
-    <script src="./peer/custom-peerjs.js"></script>
 </body>
 
 </html>
