--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -3,16 +3,18 @@
 
 <head>
 
-  <title>Realtime communication with WebRTC</title>
+    <title>Realtime communication with WebRTC</title>
 
-  <link rel="stylesheet" href="css/main.css" />
+    <link href="css/main.css" rel="stylesheet"/>
 
 </head>
 
 <body>
 
-  <h1>Realtime communication with WebRTC</h1>
+<h1>Realtime communication with WebRTC</h1>
 
+<video autoplay playsinline></video>
+
+<script src="js/main.js"></script>
 </body>
-
 </html>
