--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -13,13 +13,13 @@
 
 <h1>Realtime communication with WebRTC</h1>
 
-<video id="localVideo" autoplay playsinline></video>
-<video id="remoteVideo" autoplay playsinline></video>
+<textarea id="dataChannelSend" disabled placeholder="Press Start, enter some text, then press Send." rows="10" cols="50"></textarea>
+<textarea id="dataChannelReceive" disabled rows="10" cols="50"></textarea>
 
 <div>
   <button id="startButton">Start</button>
-  <button id="callButton">Call</button>
-  <button id="hangupButton">Hang Up</button>
+  <button id="sendButton">Send</button>
+  <button id="closeButton">Stop</button>
 </div>
 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
