--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <title>Realtime communication with WebRTC</title>
-    <link href="css/main.css" rel="stylesheet"/>
+    <link href="./css/main.css" rel="stylesheet"/>
 </head>
 <body>
 
 <h1>Realtime communication with WebRTC</h1>
 
+<div id="videos">
+    <video id="localVideo" autoplay muted></video>
+    <video id="remoteVideo" autoplay></video>
+</div>
+
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/main.js"></script>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
